# TealFlowMCP

./: .gitignore  404.html  LICENSE  QUICKSTART.md  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tealflow_mcp.py  tealflow_mcp_evaluation.xml  tealflow_mcp_requirements.txt
.github/workflows/: ci.yml  docs.yml
CONFIGURATION/: index.html
QUICKSTART/: index.html
TOOLS/: index.html
docs/: CONFIGURATION.md  QUICKSTART.md  README.md  TOOLS.md  index.md  license.md
knowledge_base/: SAP_001.txt  agent.md  app.template.R  data.R  teal_modules_clinical_dataset_requirements.json  teal_modules_clinical_modules_requirements.json  teal_modules_general_by_analysis_type.json  teal_modules_general_modules_requirements.json
knowledge_base/.claude/: settings.json
license/: index.html
sample_data/: data.R
search/: search_index.json
tealflow_mcp/: __init__.py  server.py
tealflow_mcp/core/: __init__.py  constants.py  enums.py
tealflow_mcp/data/: __init__.py  loaders.py
tealflow_mcp/knowledge_base/: agent.md  app.template.R  teal_modules_clinical_dataset_requirements.json  teal_modules_clinical_modules_requirements.json
tealflow_mcp/models/: __init__.py  input_models.py
tealflow_mcp/prompts/: __init__.py
tealflow_mcp/tools/: __init__.py  agent_guidance.py  check_shiny_startup.py  code_generation.py  data_loading.py  dataset_discovery.py  dataset_info.py  discovery.py  format_handlers.py  list_modules.py  module_details.py  other_tools.py  setup_renv.py  snapshot_renv.py
tealflow_mcp/utils/: __init__.py  dataset_readers.py  formatters.py  r_helpers.py  validators.py
tests/: test_check_shiny_startup.py  test_data_loading.py  test_dataset_readers.py  test_discovery.py  test_extract_adam_name.py  test_flexible_datasets.py  test_mcp_server.py  test_r_helpers.py  test_setup_renv.py
tests/fixtures/: README.md  invalid.rds  test_basic.csv  test_many_rows.csv  test_missing.csv  test_types.csv  test_with_samples.csv
workspace/: .gitignore  CLAUDE.md  app.template.R  claude.py  teal.md  teal_modules_clinical_by_analysis_type.json
