[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tealflow-mcp"
version = "0.1.0"
description = "MCP server for discovering, understanding, and generating Teal R Shiny applications for clinical trial data analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3.0" }
authors = [
    { name = "Jakub Nowicki", email = "kuba@appsilon.com" },
    { name = "Julian Guillo", email = "julian.guillo@appsilon.com" },
    { name = "Richard Fogaça", email = "richard.fogaca@appsilon.com" },
    { name = "Marcin Dubel", email = "marcin@appsilon.com" },
    { name = "Appsilon", email = "opensource@appsilon.com" }
]
maintainers = [
    { name = "Appsilon", email = "opensource@appsilon.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "teal",
    "clinical-trials",
    "shiny",
    "r",
    "cdisc",
    "adam"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "pyreadr>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/Appsilon/TealFlowMCP"
Repository = "https://github.com/Appsilon/TealFlowMCP"
Documentation = "https://github.com/Appsilon/TealFlowMCP#readme"
"Bug Tracker" = "https://github.com/Appsilon/TealFlowMCP/issues"

[project.scripts]
tealflow-mcp = "tealflow_mcp:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
]
docs = [
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-include-markdown-plugin>=6.0.0",
]

[tool.ruff]
# Set the maximum line length to 100
line-length = 100
target-version = "py310"

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (common in FastAPI/Pydantic)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore import order in __init__.py files
"__init__.py" = ["F401", "I001"]
# Allow unused imports in test files
"tests/*" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["tealflow_mcp"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Respect magic trailing commas
skip-magic-trailing-comma = false
# Auto-detect line ending
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = false
warn_return_any = false
strict_optional = false

# Allow untyped calls for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "mcp.*",
    "fastmcp.*",
    "pyreadr.*",
    "pandas.*",
]
ignore_missing_imports = true
